traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:60: error: Unmatched closing brace '}' ignored here
}
^